# image-scaling-service

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
