[package]
name = "image-scaling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
bindgen = "0.69.1"
image = { git = "https://github.com/image-rs/image.git", features = ["webp-encoder", "avif-decoder"] }
mime_guess = "2.0.4"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["gzip", "brotli", "rustls"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
url = "2.4.1"
